Cambios en Diseño / Reporte / Contraseña empleado

--- a/Views/Admin/AdministrarRoles.cshtml
+++ b/Views/Admin/AdministrarRoles.cshtml
@@ -6,10 +6,10 @@
 }
 
 
-<h1>Roles</h1>
+<h1 class="titulo-tabla"> Roles</h1>
 
 <!-- Tabla de Roles -->
-<table id="employeeTable">
+<table>
     <thead>
         <tr>
             <th>ID</th>
