--- a/Views/Admin/AdministrarTareas.cshtml
+++ b/Views/Admin/AdministrarTareas.cshtml
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="~/css/Estilos.css" />
 
-<h1>Tareas</h1>
+<h1 class="titulo-tabla">Tareas</h1>
 
 @if (ViewData.ModelState.Any(x => x.Value.Errors.Count > 0))
 
