--- a/Views/Catalogo/AdministrarCategorias.cshtml
+++ b/Views/Catalogo/AdministrarCategorias.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Administrar Categorías";
 }
 
-<h1>Categorías</h1>
+<h1 class="titulo-tabla">Categorías</h1>
 
 <!-- Tabla de Categorías -->
 <table id="categoryTable">
