--- a/Views/Catalogo/AdministrarPlatos.cshtml
+++ b/Views/Catalogo/AdministrarPlatos.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Administrar Platos";
 }
 
-<h1>Platos</h1>
+<h1 class="titulo-tabla">Platos</h1>
 
 <!-- Tabla de Platos -->
 <table id="categoryTable" >
