--- a/Views/Admin/AdministrarEmpleados.cshtml
+++ b/Views/Admin/AdministrarEmpleados.cshtml
@@ -1,7 +1,8 @@
 ﻿<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="~/css/Estilos.css" />
 
-<h1>Empleados</h1>
+<body>
+<h1 class="titulo-tabla">Empleados</h1>
 
 <!-- Tabla de Empleados -->
 <table id="employeeTable">
@@ -42,7 +43,9 @@
 </table>
 
 <!-- Botón Añadir Empleado -->
-<button class="add-employee" id="addEmployeeBtn">Añadir Empleado</button>
+<button class="add-employee" id="addEmployeeBtn">
+        <i class="fa-solid fa-user-plus"></i>
+    Añadir Empleado</button>
 
 <!-- Modal para añadir/editar empleado -->
 <div id="employeeModal" class="modal">
@@ -50,8 +53,7 @@
         <div class="modal-header">
             <h2 id="modalTitle">Añadir Empleado</h2>
             <span class="close" id="closeModal">&times;</span>
-        </div>      
-
+        </div>
         <form id="employeeForm">
             <input type="hidden" id="idEmpleado">
             <label for="nombre">Nombre:</label>
@@ -67,7 +69,6 @@
                     <option value="@rol.Id">@rol.Nombre</option>
                 }
             </select>
-
             <label for="horario">Horario:</label>
             <select id="horario" required>
                 @foreach (var horario in ViewBag.Horario)
@@ -77,15 +78,13 @@
                     </option>
                 }
             </select>
-
-
             <label for="salario">Salario:</label>
             <input type="number" id="salario" min="0" required>
             <button type="submit">Guardar</button>
         </form>
     </div>
 </div>
-
+</body>
 <script>
     let isEditMode = false;
 
