--- a/Views/Admin/AdministrarUsuarios.cshtml
+++ b/Views/Admin/AdministrarUsuarios.cshtml
@@ -1,5 +1,5 @@
 ﻿<link rel="stylesheet" href="~/css/Estilos.css" />
-<h1>Usuarios</h1>
+<h1 class="titulo-tabla">Usuarios</h1>
 
 <!-- Tabla de Usuarios -->
 <table id="employeeTable">
@@ -39,6 +39,20 @@
 
             </td>
         </tr>
+
+        <!-- Fila 1 -->
+        <tr>
+            <td>1</td>
+            <td>Juan</td>
+            <td>Perez</td>
+            <td>juan.perez@example.com</td>
+            <td>
+                <button class="icon-btn delete">
+                    <i class="fas fa-trash-alt"></i>
+                </button>
+            </td>
+        </tr>
+
     </tbody>
 </table>
 
