--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿﻿@{
     var userName = Context.Session.GetString("UserName");
     var userType = Context.Session.GetString("UserType");
 }
@@ -20,10 +20,11 @@
     <title>JarredsOrderHub - @(userType)</title>
 
 </head>
-<body>
+
 
     <!--Header -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+<header>
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm" style="background-color: #262626 !important;">
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="@Url.Action("Index","Home")">
@@ -40,102 +41,80 @@
                 <ul class="navbar-nav ms-auto">
                     @if (User.Identity != null && User.Identity.IsAuthenticated)
                     {
-                    <!-- Admin -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user-cog me-1"></i>Admin
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="adminDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarEmpleados","Admin")">Empleados</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarRoles","Admin")">Roles</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarTareas","Admin")">Tareas</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarUsuarios","Admin")">Usuarios</a></li>
-                        </ul>
-                    </li>
-                    }
-
+                     @if (userType == "Empleado") {
                     
+                        <!-- Admin -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user-cog me-1"></i>Admin
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarEmpleados","Admin")">Empleados</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarRoles","Admin")">Roles</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarTareas","Admin")">Tareas</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarUsuarios","Admin")">Usuarios</a></li>
+                                        <li><a class="dropdown-item" href="@Url.Action("ListadoPedidos","Envio")">Listado de Pedidos</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("HistorialPagosPedidosAdministracion","Pago")">Historial de Pagos Administracion</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("VisualizarRetroalimentaciones","Envio")">Ver Retroalimentacion</a></li>
+                                        <li><a class="dropdown-item" href="@Url.Action("AdministracionReportes","Reporte")"> Reportes </a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("EdicionInformacion","Informacion")">Apartados Informativos</a></li>
+                            </ul>
+                        </li>
+
                     <!-- Catálogo -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="catalogoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-boxes me-1"></i>Catálogo
+                            <i class="fas fa-boxes me-1"></i> Catálogo
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="catalogoDropdown">
-                            @if (User.Identity != null && User.Identity.IsAuthenticated)
-                            {
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarCategorias","Catalogo")">Administrar Categorias</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("AdministrarPlatos","Catalogo")">Administrar Platos</a></li>
-                            }
-                            <li><a class="dropdown-item" href="@Url.Action("Menu","Catalogo")">Menu</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarCategorias","Catalogo")">Administrar Categorias</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("AdministrarPlatos","Catalogo")">Administrar Platos</a></li>
                         </ul>
                     </li>
-                    }
+                    }}
+                   
                     @if (User.Identity != null && User.Identity.IsAuthenticated)
                     {
-                    <!-- Envío -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="envioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-truck me-1"></i>Envío
+                        <!-- Pedidos -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="envioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-motorcycle"></i> Pedidos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="envioDropdown">
+                                <li><a class="dropdown-item" href="@Url.Action("EstadoPedido","Envio")">Estado de mi pedido</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("ReportarProblema","Reporte")">Reportar un problema</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("HistorialPagosPedidos","Pago")">Historia de pedidos pagados</a></li>
+                            </ul>
+                        </li>
+                    }
+
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Menu", "Catalogo")" id="pedidoDropdown" role="button">
+                            <i class="fa-solid fa-utensils"></i> Menu
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="envioDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("EstadoPedido","Envio")">Estado Pedido</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("ListadoPedidos","Envio")">Listado de Pedidos</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("ReportarProblema","Envio")">Reportar Problema</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("VisualizarRetroalimentaciones","Envio")">Ver Retroalimentacion</a></li>
-                        </ul>
-                    </li>
-                    <!-- Información -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-info-circle me-1"></i>Información
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("EdicionInformacion","Informacion")">Apartados Informativos</a></li>
-                        </ul>
                     </li>
 
-                    <!-- Pago -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="pagoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-credit-card me-1"></i>Pago
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="pagoDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("HistorialPagosPedidos","Pago")">Historia de pedidos pagados</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("HistorialPagosPedidosAdministracion","Pago")">Historial de Pagos Administracion</a></li>
-                        </ul>
-                    </li>
-                    }
-                    <!-- Pedido -->
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Carrito", "Pedido")" id="pedidoDropdown" role="button">
-                            <i class="fas fa-clipboard-list me-1"></i>Carrito
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </a>
                     </li>
+
                     @if (User.Identity != null && User.Identity.IsAuthenticated)
                     {
-                    <!-- Reporte -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="reporteDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-chart-bar me-1"></i>Reporte
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="reporteDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("AdministracionReportes","Reporte")"> Reportes </a></li>
-                        </ul>
-                    </li>
+                        <!-- Mi Usuario -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="usuarioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user me-1"></i> Bienvenido @userName
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="usuarioDropdown">
+                                <li><a class="dropdown-item" href="@Url.Action("GestionPerfil","Usuario")"> Gestion Perfil</a></li>
+                                <li><a class="dropdown-item" href="/Usuario/Logout"> Cerrar Sesión</a></li>
+                            </ul>
+                        </li>
                     }
-                    @if (User.Identity != null && User.Identity.IsAuthenticated)
-                    {
-                    <!-- Mi Usuario -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="usuarioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user me-1"></i>Bienvenido @userName
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="usuarioDropdown">                     
-                            <li><a class="dropdown-item" href="@Url.Action("GestionPerfil","Usuario")">Gestion Perfil</a></li>
-                            <li><a class="dropdown-item" href="/Usuario/Logout">Cerrar Sesión</a></li>
-                        </ul>
-                    </li>
-                    } else
+                    else
                     {
                         <!-- Menú para usuario no autenticado -->
                         <li class="nav-item">
@@ -148,18 +127,14 @@
             </div>
         </div>
     </nav>
+</header>
 
-    <div style="margin: 40px 0;"></div>
-
-
-
-    <div >
+    <div>
         @RenderBody()
-
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light py-5 mt-5">
+    <footer class="bg-dark text-light py-5 " style="background-color: #262626 !important;">
         <div class="container">
             <div class="row">
                 <!-- ACERCA -->
@@ -205,5 +180,4 @@
 
     @RenderSection("scripts", required: false)
 
-</body>
 </html>
