--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                             <i class="fas fa-info-circle me-1"></i>Información
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-                            <li><a class="dropdown-item" href="@Url.Action("EdicionInformacion","Informacion")">Apartados Informativos</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("GestionarInformacion","Informacion")">Apartados Informativos</a></li>
                         </ul>
                     </li>
 
